objects/CommandCenter__SF_Environment__c.object
<CustomObject>
    <fields>
        <fullName>CommandCenter__Is_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate whether the org is production is sandbox or production</inlineHelpText>
        <label>Is Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommandCenter__Org_Type__c</fullName>
        <label>Org Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dev</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Pre-Prod</fullName>
                </value>
                <value>
                    <fullName>Prod</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Hotfix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommandCenter__Salesforce_Password__c</fullName>
        <label>Salesforce Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Salesforce_URL__c</fullName>
        <inlineHelpText>Salesforce URL to login to org</inlineHelpText>
        <label>Salesforce URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Security_Token__c</fullName>
        <inlineHelpText>Salesforce security token</inlineHelpText>
        <label>Security Token</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>CommandCenter__User_Name__c</fullName>
        <inlineHelpText>Salesforce org username used to login</inlineHelpText>
        <label>User Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <label>SF Environment</label>
    <nameField>
        <label>SF Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SF Environments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>